[ADD] add login, jwt-security, api documentation-swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=technical-test
+
+# Configuration Port
+server.port=${API_PORT:8082}
+
+# Configuration Database
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:123}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:project_management_db}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuration Security
+app.project-management.jwt-app-name=${JWT_APP_NAME:project-management}
+app.project-management.jwt-expiration=${JWT_EXPIRATION:900}
+app.project-management.jwt-secret=${JWT_SECRET:rahasia}
+app.project-management.username-admin=${USERNAME_ADMIN:admin}
+app.project-management.password-admin=${PASSWORD_ADMIN:admin123}
+
+# Multipart Config
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=10MB
+#enigma_coop.multipart.path-location=${IMAGE_PATH:}
