--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,5 @@ app.project-management.password-admin=${PASSWORD_ADMIN:admin123}
 # Multipart Config
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
-#enigma_coop.multipart.path-location=${IMAGE_PATH:}
+file.upload-dir.relative=src/main/resources/Assets/
+file.upload-dir.absolute=/home/enigma/Dev/Work/java/sekawan-media-test/technical-test/src/main/resources/Assets/
