--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuration Security
 app.project-management.jwt-app-name=${JWT_APP_NAME:project-management}
@@ -24,4 +25,4 @@ app.project-management.password-admin=${PASSWORD_ADMIN:admin123}
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
 file.upload-dir.relative=src/main/resources/Assets/
-file.upload-dir.absolute=/home/gardhangincipi/develop/work/project-management/src/main/resources/Assets
+file.upload-dir.absolute=${IMAGE_PATH:/home/gardhangincipi/develop/work/project-management/src/main/resources/Assets}
